# ds2

./: .gitignore  CMakeLists.txt  Makefile  main.c  readme.md
sorting/: bubble.c  heap.c  insertion.c  merge.c  quick.c  selection.c  sorting.h
structures/: heaptree.c  heaptree.h  priority.c  priority.h
utils/: utils.c  utils.h
